--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,8 @@
     <string name="app_name">ListaDeCompras</string>
     <string name="soma">Soma = 0.00 : Urgente = 0.00</string>
     <string name="preco">Preço</string>
+    <string name="yes">yes</string>
+    <string name="no">no</string>
     <string-array name="produtos">
         <item>Arroz</item>
         <item>Carne</item>
