--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,9 @@
 <resources>
-    <string name="app_name">ListaDeCompras</string>
+    <string name="app_name">Lista de Compras</string>
     <string name="soma">Soma = 0.00 : Urgente = 0.00</string>
     <string name="preco">Preço</string>
-    <string name="yes">yes</string>
-    <string name="no">no</string>
+    <string name="yes">Sim</string>
+    <string name="no">Não</string>
     <string-array name="produtos">
         <item>Arroz</item>
         <item>Carne</item>
